# priject_tusur

./: .travis.yml  appveyor.yml  client.py  net.py  new_file  pyproject.toml  some_app.py  wsgi.py
templates/: net.html  simple.html
