[tool.poetry]
name = "2"
version = "0.1.0"
description = ""
authors = ["Андрей Понкратенко <park-10@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.27.1"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.0.0"
Pillow = "^9.0.0"
keras = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
